--- a/group_project/group_app/templates/group_app/index.html
+++ b/group_project/group_app/templates/group_app/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+
 </head>
 <body>
+<h1>Welcome!</h1>
+<br>
+<button a="">Log In</b></button>
 
-<p>This is test 1!</p>
+<p>
 
+</p>
+<button a="">Create New User</b></button>
 </body>
+
 </html>
