--- a/group_project/group_app/templates/group_app/index.html
+++ b/group_project/group_app/templates/group_app/index.html
@@ -8,12 +8,8 @@
 <body>
 <h1>Welcome!</h1>
 <br>
-<button a="">Log In</b></button>
-
-<p>
-
-</p>
-<button a="">Create New User</b></button>
+<a href="{% url 'login' %}">LOGIN</a>
+<a href="{% url 'create_user' %}">NEW USER</a>
 </body>
 
 </html>
