--- a/group_project/group_app/templates/group_app/index.html
+++ b/group_project/group_app/templates/group_app/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <!--welcome page-->
-<h1>Welcome!</h1>
+<h1>Welcome to the Game Collections App!</h1>
 <br>
 <!--link to login from registration directory-->
-<a href="{% url 'login' %}">LOGIN</a>
+<a href="{% url 'login' %}">LOG IN</a>    or
+<br>
 <br>
 <!--link to create new user from views-->
-<a href="{% url 'create_user' %}">CREATE USER</a>
+<a href="{% url 'create_user' %}">CREATE A NEW USER</a>
 
 <!--new user from-->
 <form method="POST">
@@ -25,7 +26,7 @@
 <form method="POST">
     {% csrf_token %}
     {{ game_form.as_p }}
-    <button>Submit New Game</button>
+    <!--<button>Submit New Game</button>-->
 </form>
 
 <!--display games from game model-->
